# vinagre

./: configure.ac  vinagre.doap
data/: org.gnome.Vinagre.gschema.xml  vinagre.appdata.xml.in  vinagre.ui
help/: Makefile.am
help/ca/: ca.po
help/es/: es.po
help/fa/: fa.po
help/fr/: fr.po
help/fur/: fur.po
help/gl/: gl.po
help/ko/: ko.po
help/pl/: pl.po
help/pt_BR/: pt_BR.po
help/uk/: uk.po
plugins/rdp/: vinagre-rdp-tab.c
plugins/spice/: vinagre-spice-plugin.c  vinagre-spice-tab.c
plugins/vnc/: vinagre-vnc-connection.c  vinagre-vnc-plugin.c
po/: LINGUAS  af.po  be.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  hr.po  hu.po  id.po  it.po  ja.po  kk.po  ko.po  lt.po  lv.po  ml.po  ms.po  nb.po  ne.po  nl.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  si.po  (+9 more)
vinagre/: vinagre-bookmarks-ui.c  vinagre-main.c  vinagre-ssh.c  vinagre-tab.c
vinagre/view/: ovBox.c
